--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Portfolio Homepage"
+title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Rishabh Bhattarai"
 description              : &description "Computer Engineering Student"
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Rishabh Bhattarai"
-  pronouns         : "He/him"
+  pronouns         : 
   bio              : "Computer Engineering Student"
   location         : "Kalamazoo / East Lansing, MI"
   employer         : "Michigan State University"
