--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - #title: "Publications"
-    #url: /publications/
+  - title: "Research"
+    url: /publications/
 
   - #title: "Talks"
     #url: /talks/    
@@ -15,7 +15,7 @@ main:
   - #title: "Blog Posts"
     #url: /year-archive/
     
-  - title: "CV"
+  - title: "Resume"
     url: /files/RBhattaraiResume.pdf
     
   - #title: "Guide"
