Added job title

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Rishabh Bhattarai"
   pronouns         : 
-  bio              : "Computer Engineering Student"
+  bio              : "Computer Engineering Student || SharePoint Developer @ MSU FRIB"
   location         : "Kalamazoo / East Lansing, MI"
   employer         : "Michigan State University"
   uri              : # URL
