--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - #title: "Talks"
     #url: /talks/    
 
-  - #title: "Teaching"
-    #url: /teaching/    
+  - title: "Education"
+    url: /teaching/    
     
   - title: "Portfolio"
     url: /portfolio/
