fixed resume link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,7 @@ main:
     url: /portfolio/
     
   - title: "Resume"
-    url: files/RBhattaraiResume.pdf
+    url: /files/RBhattaraiResume.pdf
 
+ 
 
