--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ author:
   avatar           : "profile.png"
   name             : "Rishabh Bhattarai"
   pronouns         : 
-  bio              : "Computer Engineering Student  SharePoint Developer @ MSU FRIB"
-  location         : "Kalamazoo / East Lansing, MI"
-  employer         : "Michigan State University"
+  bio              : "Computer Engineering"
+  location         : "Kalamazoo / Ann Arbor, MI"
+  employer         : "University of Michigan"
   uri              : # URL
-  email            : "bhatta86@msu.edu" 
+  email            : "brishabh@umich.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
