--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Rishabh Bhattarai"
   pronouns         : 
-  bio              : 
+  bio              : ""
   location         : "Kalamazoo / Ann Arbor, MI"
   employer         : "University of Michigan"
   uri              : # URL
